--- a/roles/lint-sherlock/templates/sbatch.j2
+++ b/roles/lint-sherlock/templates/sbatch.j2
@@ -33,7 +33,7 @@
 module load openmpi/1.10.2/gcc
 module load python/3.3.2
 
-export PYTHONPATH={{ stacks_dirs.src }}
+export PYTHONPATH={{ lint_dirs.code }}
 
 mpirun -x PYTHONPATH $PYTHONPATH/env/bin/python \
     $PYTHONPATH/bin/{{ item.name }}.py
