Perf testing extract-gail.

--- a/roles/lint-sherlock/templates/lint/lint.yml.j2
+++ b/roles/lint-sherlock/templates/lint/lint.yml.j2
@@ -6,7 +6,7 @@ htrc:
 
 chicago: {{ stacks_raw }}/chicago
 
-gail: {{ stacks_raw }}/gail
+gail: {{ stacks_raw }}/gail-amfic
 
 results:
   htrc: {{ lint_result_dirs.htrc }}
