Render config for Gale parquet.

--- a/roles/lint/templates/application.conf.j2
+++ b/roles/lint/templates/application.conf.j2
@@ -1,5 +1,6 @@
 
-lint.gale.directory="{{ lint_config.gale_dir }}"
+lint.gale.corpusDir="{{ lint_config.gale.corpus_dir }}"
+lint.gale.novelParquet="{{ lint_config.gale.novel_parquet }}"
 
 lint.chicago.novelMetadataPath="{{ lint_config.chicago.novel_csv }}"
 lint.chicago.authorMetadataPath="{{ lint_config.chicago.author_csv }}"
