spark-submit tuning.

--- a/roles/lint/templates/sbatch.j2
+++ b/roles/lint/templates/sbatch.j2
@@ -36,4 +36,7 @@ module load jre/1.8.0_91
 spark-submit \
   --driver-class-path {{ lint_dirs.config }} \
   --class {{ item.class }} \
+  --total-executor-cores {{ item.tasks_per_node * item.cpus_per_task * item.nodes }} \
+  --driver-memory {{ item.mem }}m \
+  --executor-memory {{ item.mem}}m \
   {{ lint_jar_path }}
