--- a/roles/lint/templates/sbatch.j2
+++ b/roles/lint/templates/sbatch.j2
@@ -47,5 +47,6 @@ spark-submit \
   --class {{ item.class }} \
   --total-executor-cores {{ cores }} \
   --driver-memory {{ item.mem }}m \
-  --executor-memory {{ item.mem}}m \
+  --executor-memory {{ item.mem }}m \
+  --master spark://$MASTER:7077 \
   {{ lint_jar_path }}
