Fix Chicago textDir config key, render author / novel parquet keys.

--- a/roles/lint/templates/application.conf.j2
+++ b/roles/lint/templates/application.conf.j2
@@ -4,4 +4,6 @@ lint.gale.novelParquet="{{ lint_config.gale.novel_parquet }}"
 
 lint.chicago.novelMetadataPath="{{ lint_config.chicago.novel_csv }}"
 lint.chicago.authorMetadataPath="{{ lint_config.chicago.author_csv }}"
-lint.chicago.textDirectory="{{ lint_config.chicago.text_dir }}"
+lint.chicago.textDir="{{ lint_config.chicago.text_dir }}"
+lint.chicago.authorParquet="{{ lint_config.chicago.author_parquet }}"
+lint.chicago.novelParquet="{{ lint_config.chicago.novel_parquet }}"
