Break out an 'lint_application_conf' variable.

--- a/roles/lint/templates/sbatch.j2
+++ b/roles/lint/templates/sbatch.j2
@@ -50,7 +50,7 @@ sleep 20
 
 spark-submit \
   --driver-class-path {{ lint_dirs.config }} \
-  --files {{ lint_dirs.config }}/application.conf \
+  --files {{ lint_application_conf }} \
   --conf spark.executor.extraClassPath=./ \
   --total-executor-cores {{ cores }} \
   --conf spark.default.parallelism={{ cores }} \
