Render lint.corpus.novelParquet + binCountCSV config keys.

--- a/roles/lint/templates/application.conf.j2
+++ b/roles/lint/templates/application.conf.j2
@@ -7,3 +7,6 @@ lint.chicago.authorMetadataPath="{{ lint_config.chicago.author_csv }}"
 lint.chicago.textDir="{{ lint_config.chicago.text_dir }}"
 lint.chicago.authorParquet="{{ lint_config.chicago.author_parquet }}"
 lint.chicago.novelParquet="{{ lint_config.chicago.novel_parquet }}"
+
+lint.corpus.novelParquet="{{ lint_config.corpus.novel_parquet }}"
+lint.corpus.binCountCSV="{{ lint_config.corpus.bin_count_csv }}"
