In the sbatch template, forward CLI args to the Spark job.

--- a/roles/lint/templates/sbatch.j2
+++ b/roles/lint/templates/sbatch.j2
@@ -59,4 +59,4 @@ spark-submit \
   --executor-memory {{ executor_memory }}m \
   --class {{ item.class }} \
   --master spark://$MASTER:7077 \
-  {{ lint_jar_path }}
+  {{ lint_jar_path }} $@
