--- a/roles/lint/templates/sbatch.j2
+++ b/roles/lint/templates/sbatch.j2
@@ -30,6 +30,8 @@
 #SBATCH --ntasks-per-node=1
 #SBATCH --cpus-per-task={{ item.cores }}
 #################
+#SBATCH -p hns,normal
+#################
 
 module load jre/1.8.0_91
 
@@ -53,7 +55,6 @@ spark-submit \
   --driver-class-path {{ lint_dirs.config }} \
   --files {{ lint_application_conf }} \
   --conf spark.executor.extraClassPath=./ \
-  --conf spark.default.parallelism={{ cores }} \
   --driver-memory {{ driver_memory }}m \
   --executor-memory {{ executor_memory }}m \
   --class {{ item.class }} \
